# iagd

./: .copilot-context.md  test_client.py
HookDll/: PHASE1_BUILD.md
HookDll/Detours-master/src/: detours.cpp  detours.h  detours_mingw_compat.h  image.cpp  modules.cpp
HookDll/Hook/: BaseMethodHook.cpp  CMakeLists.txt  CMakeLists_native.txt  DataQueue.cpp  DataQueue.h  DebugLog.h  GetPrivateStash.cpp  GrimTypes.cpp  GrimTypes.h  HookConfig.cpp  HookConfig.h  HookLog.cpp  InventorySack_AddItem.cpp  InventorySack_AddItem.h  JsonSerializer.h  OnDemandSeedInfo.cpp  OnDemandSeedInfo.h  SettingsReader.cpp  TcpClient.cpp  TcpClient.h  dllmain.cpp  mingw64-toolchain.cmake  stdafx.h
HookDll/Hook/build_native/: CMakeCache.txt  Makefile  cmake_install.cmake
gdia-tauri/: Cargo.toml
gdia-tauri/data/: gdia.db
gdia-tauri/src/: database.rs  main.rs  models.rs  tcp_server.rs
